[package]
name = "multidict"
version = "0.2.2"
description = "Python MultiDict implementation."
edition = "2021"
authors = ["Red-Panda-Dev <red_panda_dev@pm.me>"]
keywords = ["multidict", "data-structure"]
license = "MIT OR MPL-2.0"
repository = "https://github.com/Red-Panda-Dev/multidict"
homepage = "https://crates.io/crates/multidict"
documentation = "https://docs.rs/multidict/latest/multidict/"
rust-version = "1.83"
exclude = ["files/*", ".github/*", ".gitignore",
            "rustfmt.toml", "LICENSE", "CODE_OF_CONDUCT.md",
            "CONTRIBUTING.md"]

[lib]
name = "multidict"
path = "src/lib.rs"
crate-type = ["lib"]
